# qlib_strategy_core

./: .gitignore  README.md  pyproject.toml
qlib/data/_libs/: _build_extensions.py  build.bat  expanding.cp311-win_amd64.pyd  expanding.cp313-win_amd64.pyd  rolling.cp311-win_amd64.pyd  rolling.cp313-win_amd64.pyd
qlib/workflow/: recorder.py
qlib_strategy_core/: __init__.py  alpha_factor_store.py  baseline.py  config.py  dashboard_contract.py  inference.py  metrics.py  pipeline.py
qlib_strategy_core/_compat/: __init__.py  legacy_paths.py
qlib_strategy_core/cli/: __init__.py  run_ic_backfill.py  run_inference.py
qlib_strategy_core/handlers/: __init__.py  alpha_158_custom.py
scripts/: export_bundle.py  probe_compute_ic.py  probe_label_dataset.py
tests/: test_baseline.py  test_imports.py
